[project]
name = "linux-profiler-mcp"
version = "1.0.0"
description = "Linux Performance Profiler with MCP Protocol Support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linux_profiler"]

[project.scripts]
linux-profiler = "linux_profiler.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
