[project]
name = "linux-profiler-mcp"
version = "1.1.0"
description = "Linux Performance Profiler with MCP Protocol Support and Process Profiling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Linux Profiler Contributors"}
]
keywords = ["linux", "performance", "profiler", "mcp", "monitoring", "perf", "flame-graph", "system-metrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yuezhongtao/linux-profiler-tool"
Repository = "https://github.com/yuezhongtao/linux-profiler-tool"
Issues = "https://github.com/yuezhongtao/linux-profiler-tool/issues"
Changelog = "https://github.com/yuezhongtao/linux-profiler-tool/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linux_profiler"]

[project.scripts]
linux-profiler = "linux_profiler.server:main"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
